--- a/src/index.css
+++ b/src/index.css
@@ -10,4 +10,10 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+   
 }
+html{
+  background: #1f1f1f;
+}
+
+
